1148592559	Instant-Messenger-Benachrichtigung bis jetzt für eingehende Nachrichten.
1148486661	Neue Versionsnummer: 1.0.1
1148486658	Die Hauptseite ist nun skalierbar.
1146346624	Bug behoben: Man konnte mehr Roboter handeln als man hatte.
1146346564	Flugerfahrung wird nun angerechnet.
1145443860	Allianztags können nun alle drei Tage geändert werden.
1145413304	Neues Feature: Koordinatenlesezeichen.
1145413295	Dringender Bugfix: Roboterhandel.
1143747314	Ajax-Feature in die Karte eingebaut, schnelleres Wechseln des Systems.
1143411205	Allianzbewerbungen können nun untersagt werden.
1143403372	Groß-Klein-Schreibung zählt jetzt nicht mehr in Benutzeraccounts und Allianzen.
1143384025	Ajax-Feature verbessert.
1143332188	Dringender Bugfix, Forschungspunkteberechnung bei mehreren Planeten.
1143332044	Neues Feature: Autocompletion.
1143297134	Neue Versionsnummer: 1.0.0
1142725918	Neue Versionsnummer: 1.0.0 beta 3
1142724787	Handelssystem eingebaut.
1142708844	Highscores auf SQL umgestellt.
1142708832	Beim Planetenwechsel werden nun die URL-Parameter beibehalten.
1142550226	Sammeln eingebaut.
1142290406	Erweiterte Einstellungsmöglichkeiten zu bauenden Gegenständen in der Übersicht.
1142182028	Bugfix: Startrohstoffe bei Besiedelung.
1142172831	Neue Versionsnummer: 1.0.0 beta 2
1142035317	Neue Versionsnummer: 1.0.0 beta 1
1142035294	Wichtige Fortschritte am Flottensystem.
1141576344	Anmeldung jetzt auch per GET möglich.
1140977668	Todo-Liste entfernt, soll jetzt über Bugtracker laufen (http://bugs.s-u-a.net).
1140360089	Änderung in der Bauzeitenberechnung.
1140208547	Das Flottensystem unterstützt jetzt die Auftragsarten Stationieren und Besiedeln.
1139155215	Erste Teile des neuen Flottensystems eingebaut.
1138465441	Bei voller Platte gehen jetzt keine Daten mehr verloren.
1138455336	Allianz-Highscores-Bug behoben.
1138412932	Bug im Roboterbau behoben.