@@ -3,7 +3,7 @@
 
 	if(isset($_POST['cancel-all-verteidigung']))
 	{
-		if($me->checkPassword($_POST['cancel-all-verteidigung']) && $me->removeBuildingThing('verteidigung'))
+		if($me->checkPassword($_POST['cancel-all-verteidigung']) && $me->removeBuildingThing('verteidigung', true))
 			delete_request();
 	}
 
