@@ -1,3 +1,4 @@
+1148662963	Instant-Messenger-Benachrichtigung bei fertiggestellten Dingen.
 1148592559	Instant-Messenger-Benachrichtigung bis jetzt für eingehende Nachrichten.
 1148486661	Neue Versionsnummer: 1.0.1
 1148486658	Die Hauptseite ist nun skalierbar.
